--- a/src/client/components/frsForums/frsForums.less
+++ b/src/client/components/frsForums/frsForums.less
@@ -70,6 +70,7 @@
                 padding: 0.25em;
             }
             .frs-title {
+                font-size: 1rem;
                 font-weight: bold;
             }
             .frs-comment {
