--- a/src/client/components/frsModerate/frsModerate.less
+++ b/src/client/components/frsModerate/frsModerate.less
@@ -53,5 +53,8 @@
             color: gray;
             font-size: 95%;
         }
+        .frs-authoring {
+            font-size: 90%;
+        }
     }
 }
