--- a/src/client/components/frsThreads/frsThreads.html
+++ b/src/client/components/frsThreads/frsThreads.html
@@ -27,7 +27,7 @@
             {{else}}
                 <p class="frs-title flex-grow-1"></p>
             {{/if}}
-            <button type="button" class="btn btn-outline-primary btn-sm frs-btn frs-thread-new-btn" data-bs-toggle="button" {{ disableNew }}>{{ i18n label="new" }}</button>
+            <button type="button" class="btn btn-outline-primary btn-sm frs-thread-new-btn" data-bs-toggle="button" {{ disableNew }}>{{ i18n label="new" }}</button>
         </div>
 
         <div class="frs-new-thread">
