--- a/src/client/components/frs_tree_tab/frs_tree_tab.html
+++ b/src/client/components/frs_tree_tab/frs_tree_tab.html
@@ -6,8 +6,8 @@
                 {{{ i18n label="description" }}}
             </div>
             <div class="buttons d-flex flex-column justify-content-around">
-                <button class="btn btn-primary btn-sm frs-btn frs-new-category">{{ i18n label="category_new" }}</button>
-                <button class="btn btn-primary btn-sm frs-btn frs-new-forum">{{ i18n label="forum_new" }}</button>
+                <button class="btn btn-primary btn-sm frs-new-category">{{ i18n label="category_new" }}</button>
+                <button class="btn btn-primary btn-sm frs-new-forum">{{ i18n label="forum_new" }}</button>
             </div>
         </div>
 
