--- a/src/client/stylesheets/frs_forums.less
+++ b/src/client/stylesheets/frs_forums.less
@@ -72,6 +72,10 @@
             justify-self: end;
             white-space: nowrap;
         }
+        .frs-two {
+            justify-self: start;
+            white-space: nowrap;
+        }
     }
 }
 
