--- a/src/client/components/frs_category_edit/frs_category_edit.html
+++ b/src/client/components/frs_category_edit/frs_category_edit.html
@@ -21,7 +21,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="frs-right frs-top">
+                                <td class="frs-right frs-vatop">
                                     <label for="" class="form-label form-label-sm">{{ i18n label="description_label" }}</label>
                                 </td>
                                 <td>
