--- a/src/client/stylesheets/frs_forums.less
+++ b/src/client/stylesheets/frs_forums.less
@@ -174,14 +174,26 @@
 .frs-nowrap {
     white-space: nowrap;
 }
+.frs-pb05 {
+    padding-bottom: 0.5em;
+}
+.frs-pl1 {
+    padding-left: 1em;
+}
+.frs-pl2 {
+    padding-left: 2em;
+}
+.frs-pr1 {
+    padding-right: 1em;
+}
 .frs-right {
     text-align: right;
 }
-.frs-top {
-    vertical-align: top;
-}
 .frs-transparent {
     opacity: 0;
+}
+.frs-vatop {
+    vertical-align: top;
 }
 .frs-w2 {
     width: 2em;
@@ -192,6 +204,9 @@
     width: 3em;
     min-width: 3em;
     max-width: 3em;
+}
+.frs-w100 {
+    width: 100%;
 }
 /*
  * COLORS
