--- a/src/client/components/frsModerate/frsModerate.less
+++ b/src/client/components/frsModerate/frsModerate.less
@@ -78,6 +78,7 @@
         .frs-authoring {
             font-size: 90%;
         }
+        .frs-moderated,
         .frs-validated {
             font-size: 90%;
             font-style: italic;
