Get the right sort order on the client

--- a/src/client/components/frsModerate/frsModerate.html
+++ b/src/client/components/frsModerate/frsModerate.html
@@ -126,7 +126,7 @@
                                     </div>
                                 </td>
                             </tr>
-                            {{ postEnd }}
+                            {{ postEnd p }}
                         {{/each}}
                     {{else}}
                         <p class="frs-no-new-post">{{ noNewPost }}</p>
